--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,6 @@
                         <span class="hero-info__win">€1852</span>
                     </div>        
                 </div>
-                
             </div>
             <div class="heroes__first-hero hero" tabindex="0">
                 <div class="hero-imgs hero-imgs--first">
@@ -82,43 +81,43 @@
 
             <div class="winners-block__table-wrap">
                 <img class="fire" src="./img/fire.svg" alt="fire">
-                <table class="table">
+                <table tabindex="0" class="table">
                     <thead>
-                        <th scope="col">Place</th>
-                        <th scope="col">Player </th>
-                        <th scope="col">Score</th>
-                        <th scope="col">Prize</th>
+                        <th tabindex="0" scope="col">Place</th>
+                        <th tabindex="0" scope="col">Player </th>
+                        <th tabindex="0" scope="col">Score</th>
+                        <th tabindex="0" scope="col">Prize</th>
                     </thead>
                     <tbody>
                         <tr>
-                            <td scope="row">1</td>
-                            <td>Anja</td>
-                            <td>3.851</td>
-                            <td>10000</td>
+                            <td tabindex="0" scope="row">1</td>
+                            <td tabindex="0">Anja</td>
+                            <td tabindex="0">3.851</td>
+                            <td tabindex="0">10000</td>
                         </tr>
                         <tr>
-                            <td scope="row">2</td>
-                            <td>Vasja</td>
-                            <td>3.753</td>
-                            <td>9500€</td>
+                            <td tabindex="0" scope="row">2</td>
+                            <td tabindex="0">Vasja</td>
+                            <td tabindex="0">3.753</td>
+                            <td tabindex="0">9500€</td>
                         </tr>
                         <tr>
-                            <td scope="row">3</td>
-                            <td>Dima</td>
-                            <td>3.612</td>
-                            <td>9000€</td>
+                            <td tabindex="0" scope="row">3</td>
+                            <td tabindex="0">Dima</td>
+                            <td tabindex="0">3.612</td>
+                            <td tabindex="0">9000€</td>
                         </tr>
                         <tr>
-                            <td scope="row">4</td>
-                            <td>Kolja</td>
-                            <td>3.121</td>
-                            <td>8000€</td>
+                            <td tabindex="0" scope="row">4</td>
+                            <td tabindex="0">Kolja</td>
+                            <td tabindex="0">3.121</td>
+                            <td tabindex="0">8000€</td>
                         </tr>
                         <tr>
-                            <td scope="row">5</td>
-                            <td>Pasha</td>
-                            <td>3.032</td>
-                            <td>7000€</td>
+                            <td tabindex="0" scope="row">5</td>
+                            <td tabindex="0">Pasha</td>
+                            <td tabindex="0">3.032</td>
+                            <td tabindex="0">7000€</td>
                         </tr>
                     </tbody>
     
